tests/snapshots/compile__wgsl_generate_star_connected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_checkerboard3_color1: vec4f,
    u_control_checkerboard3_color2: vec4f,
    u_control_checkerboard3_frequency: f32,
    u_control_checkerboard4_color1: vec4f,
    u_control_checkerboard4_color2: vec4f,
    u_control_checkerboard4_frequency: f32,
    u_control_mix11_amount: f32,
    u_control_rgba10_a: f32,
    u_control_rgba10_b: f32,
    u_control_rgba10_g: f32,
    u_control_vignette5_radius: f32,
    u_control_vignette5_softness: f32,
    u_control_vignette6_radius: f32,
    u_control_vignette6_softness: f32,
    u_control_vignette7_radius: f32,
    u_control_vignette7_softness: f32,
    u_control_vignette8_radius: f32,
    u_control_vignette8_softness: f32,
    u_control_vignette9_radius: f32,
    u_control_vignette9_softness: f32,
    u_opt_mix11_curve: i32,
    u_opt_mix11_method: i32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn checkerboard3_output(uv: vec2f) -> vec4f {
    let frequency = u.u_control_checkerboard3_frequency;
    let scaled_uv = uv * (frequency / 2.0);
    let grid = floor(scaled_uv);
    let checker = floor_mod(grid.x + grid.y, 2.0);
    let c1 = u.u_control_checkerboard3_color1;
    let c2 = u.u_control_checkerboard3_color2;
    return mix(c1, c2, checker);
}

fn checkerboard4_output(uv: vec2f) -> vec4f {
    let frequency = u.u_control_checkerboard4_frequency;
    let scaled_uv = uv * (frequency / 2.0);
    let grid = floor(scaled_uv);
    let checker = floor_mod(grid.x + grid.y, 2.0);
    let c1 = u.u_control_checkerboard4_color1;
    let c2 = u.u_control_checkerboard4_color2;
    return mix(c1, c2, checker);
}

fn vignette5_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette5_radius;
    let softness = max(u.u_control_vignette5_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn vignette6_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette6_radius;
    let softness = max(u.u_control_vignette6_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn vignette7_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette7_radius;
    let softness = max(u.u_control_vignette7_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn vignette8_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette8_radius;
    let softness = max(u.u_control_vignette8_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn vignette9_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette9_radius;
    let softness = max(u.u_control_vignette9_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn star1_color(uv: vec2f) -> vec4f {
    let points = clamp(vignette5_mask(uv), 3.0, 12.0);
    let innerRadius = vignette6_mask(uv);
    let rotation = (vignette7_mask(uv)) * 2.0 * PI;
    let cuv = uv - vec2f(vignette8_mask(uv), vignette9_mask(uv));
    let cs = cos(rotation);
    let sn = sin(rotation);
    let p = vec2f(cuv.x * cs - cuv.y * sn, cuv.x * sn + cuv.y * cs);
    let sweep = PI * 2.0 / points;
    var acc = 0.0;
    var a = 0.0;
    for (var i = 0; i < 12; i++) {
        if (f32(i) >= points) { break; }
        let dir = vec2f(sin(a), cos(a));
        acc += select(0.0, 0.5, dot(dir, p - dir * innerRadius) > 0.0);
        a += sweep;
    }
    let mask = step(acc, 0.9999);
    return mix(checkerboard4_output(uv), checkerboard3_output(uv), mask);
}

fn star1_mask(uv: vec2f) -> f32 {
    let points = clamp(vignette5_mask(uv), 3.0, 12.0);
    let innerRadius = vignette6_mask(uv);
    let rotation = (vignette7_mask(uv)) * 2.0 * PI;
    let cuv = uv - vec2f(vignette8_mask(uv), vignette9_mask(uv));
    let cs = cos(rotation);
    let sn = sin(rotation);
    let p = vec2f(cuv.x * cs - cuv.y * sn, cuv.x * sn + cuv.y * cs);
    let sweep = PI * 2.0 / points;
    var acc = 0.0;
    var a = 0.0;
    for (var i = 0; i < 12; i++) {
        if (f32(i) >= points) { break; }
        let dir = vec2f(sin(a), cos(a));
        acc += select(0.0, 0.5, dot(dir, p - dir * innerRadius) > 0.0);
        a += sweep;
    }
    let mask = step(acc, 0.9999);
    return mask;
}

fn rgba10_output(uv: vec2f) -> vec4f {
    return premultiply(vec4f(star1_mask(uv), u.u_control_rgba10_g, u.u_control_rgba10_b, u.u_control_rgba10_a));
}

fn mix11_output(uv: vec2f) -> vec4f {
    let a = star1_color(uv);
    let b = rgba10_output(uv);
    let amt = clamp(u.u_control_mix11_amount, 0.0, 1.0);
    let f = select(
        amt,
        clamp(0.5 + 0.5 * tan(clamp(2.0 * amt - 1.0, -0.999, 0.999) * 1.5707963), 0.0, 1.0),
        u.u_opt_mix11_curve == 1);
    let lum = dot(a.rgb, vec3f(0.299, 0.587, 0.114));
    let m = u.u_opt_mix11_method;
    if (m == 1) {
        return select(a, b, lum < f);
    } else if (m == 2) {
        return select(a, b, lum > 1.0 - f);
    } else {
        return mix(a, b, f);
    }
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return mix11_output(uv);
}
