tests/snapshots/compile__wgsl_generate_static_connected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_checkerboard3_color1: vec4f,
    u_control_checkerboard3_color2: vec4f,
    u_control_checkerboard3_frequency: f32,
    u_control_checkerboard4_color1: vec4f,
    u_control_checkerboard4_color2: vec4f,
    u_control_checkerboard4_frequency: f32,
    u_control_mix10_amount: f32,
    u_control_rgba9_a: f32,
    u_control_rgba9_b: f32,
    u_control_rgba9_g: f32,
    u_control_vignette5_radius: f32,
    u_control_vignette5_softness: f32,
    u_control_vignette6_radius: f32,
    u_control_vignette6_softness: f32,
    u_control_vignette7_radius: f32,
    u_control_vignette7_softness: f32,
    u_control_vignette8_radius: f32,
    u_control_vignette8_softness: f32,
    u_count_static1_clock: vec2f,
    u_opt_mix10_curve: i32,
    u_opt_mix10_method: i32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn cellHash(cell: vec2f, seed: f32) -> f32 {
    return fract(sin(dot(cell, vec2f(12.9898, 78.233)) + seed) * 43758.5453);
}

fn checkerboard3_output(uv: vec2f) -> vec4f {
    let frequency = u.u_control_checkerboard3_frequency;
    let scaled_uv = uv * (frequency / 2.0);
    let grid = floor(scaled_uv);
    let checker = floor_mod(grid.x + grid.y, 2.0);
    let c1 = u.u_control_checkerboard3_color1;
    let c2 = u.u_control_checkerboard3_color2;
    return mix(c1, c2, checker);
}

fn checkerboard4_output(uv: vec2f) -> vec4f {
    let frequency = u.u_control_checkerboard4_frequency;
    let scaled_uv = uv * (frequency / 2.0);
    let grid = floor(scaled_uv);
    let checker = floor_mod(grid.x + grid.y, 2.0);
    let c1 = u.u_control_checkerboard4_color1;
    let c2 = u.u_control_checkerboard4_color2;
    return mix(c1, c2, checker);
}

fn vignette5_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette5_radius;
    let softness = max(u.u_control_vignette5_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn vignette6_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette6_radius;
    let softness = max(u.u_control_vignette6_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn vignette7_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette7_radius;
    let softness = max(u.u_control_vignette7_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn vignette8_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette8_radius;
    let softness = max(u.u_control_vignette8_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn static1_color(uv: vec2f) -> vec4f {
    let noiseScale = vignette6_mask(uv);
    let smoothness = clamp(vignette8_mask(uv), 0.0, 1.0);
    let gridUV = uv * noiseScale;
    let cell = floor(gridUV);
    let cellFract = fract(gridUV);
    let roll = floor(time_unbounded(u.u_count_static1_clock, vignette7_mask(uv)));
    let animSeed = vignette5_mask(uv) + roll;
    let tl = cellHash(cell, animSeed);
    let tr = cellHash(cell + vec2f(1.0, 0.0), animSeed);
    let bl = cellHash(cell + vec2f(0.0, 1.0), animSeed);
    let br = cellHash(cell + vec2f(1.0, 1.0), animSeed);
    let blend = smoothstep(vec2f(0.0), vec2f(1.0), cellFract);
    let smoothed = mix(mix(tl, tr, blend.x), mix(bl, br, blend.x), blend.y);
    let value = mix(tl, smoothed, smoothness);
    return mix(checkerboard4_output(uv), checkerboard3_output(uv), value);
}

fn static1_value(uv: vec2f) -> f32 {
    let noiseScale = vignette6_mask(uv);
    let smoothness = clamp(vignette8_mask(uv), 0.0, 1.0);
    let gridUV = uv * noiseScale;
    let cell = floor(gridUV);
    let cellFract = fract(gridUV);
    let roll = floor(time_unbounded(u.u_count_static1_clock, vignette7_mask(uv)));
    let animSeed = vignette5_mask(uv) + roll;
    let tl = cellHash(cell, animSeed);
    let tr = cellHash(cell + vec2f(1.0, 0.0), animSeed);
    let bl = cellHash(cell + vec2f(0.0, 1.0), animSeed);
    let br = cellHash(cell + vec2f(1.0, 1.0), animSeed);
    let blend = smoothstep(vec2f(0.0), vec2f(1.0), cellFract);
    let smoothed = mix(mix(tl, tr, blend.x), mix(bl, br, blend.x), blend.y);
    let value = mix(tl, smoothed, smoothness);
    return value;
}

fn rgba9_output(uv: vec2f) -> vec4f {
    return premultiply(vec4f(static1_value(uv), u.u_control_rgba9_g, u.u_control_rgba9_b, u.u_control_rgba9_a));
}

fn mix10_output(uv: vec2f) -> vec4f {
    let a = static1_color(uv);
    let b = rgba9_output(uv);
    let amt = clamp(u.u_control_mix10_amount, 0.0, 1.0);
    let f = select(
        amt,
        clamp(0.5 + 0.5 * tan(clamp(2.0 * amt - 1.0, -0.999, 0.999) * 1.5707963), 0.0, 1.0),
        u.u_opt_mix10_curve == 1);
    let lum = dot(a.rgb, vec3f(0.299, 0.587, 0.114));
    let m = u.u_opt_mix10_method;
    if (m == 1) {
        return select(a, b, lum < f);
    } else if (m == 2) {
        return select(a, b, lum > 1.0 - f);
    } else {
        return mix(a, b, f);
    }
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return mix10_output(uv);
}
