tests/snapshots/compile__wgsl_generate_static_unconnected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_mix4_amount: f32,
    u_control_rgba3_a: f32,
    u_control_rgba3_b: f32,
    u_control_rgba3_g: f32,
    u_control_static1_background: vec4f,
    u_control_static1_foreground: vec4f,
    u_control_static1_phaseOffset: f32,
    u_control_static1_scale: f32,
    u_control_static1_seed: f32,
    u_control_static1_smoothness: f32,
    u_count_static1_clock: vec2f,
    u_opt_mix4_curve: i32,
    u_opt_mix4_method: i32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn cellHash(cell: vec2f, seed: f32) -> f32 {
    return fract(sin(dot(cell, vec2f(12.9898, 78.233)) + seed) * 43758.5453);
}

fn static1_color(uv: vec2f) -> vec4f {
    let noiseScale = u.u_control_static1_scale;
    let smoothness = clamp(u.u_control_static1_smoothness, 0.0, 1.0);
    let gridUV = uv * noiseScale;
    let cell = floor(gridUV);
    let cellFract = fract(gridUV);
    let roll = time_cells(u.u_count_static1_clock, WHOLE_WRAP, u.u_control_static1_phaseOffset).x;
    let animSeed = u.u_control_static1_seed + roll;
    let tl = cellHash(cell, animSeed);
    let tr = cellHash(cell + vec2f(1.0, 0.0), animSeed);
    let bl = cellHash(cell + vec2f(0.0, 1.0), animSeed);
    let br = cellHash(cell + vec2f(1.0, 1.0), animSeed);
    let blend = smoothstep(vec2f(0.0), vec2f(1.0), cellFract);
    let smoothed = mix(mix(tl, tr, blend.x), mix(bl, br, blend.x), blend.y);
    let value = mix(tl, smoothed, smoothness);
    return mix(u.u_control_static1_background, u.u_control_static1_foreground, value);
}

fn static1_value(uv: vec2f) -> f32 {
    let noiseScale = u.u_control_static1_scale;
    let smoothness = clamp(u.u_control_static1_smoothness, 0.0, 1.0);
    let gridUV = uv * noiseScale;
    let cell = floor(gridUV);
    let cellFract = fract(gridUV);
    let roll = time_cells(u.u_count_static1_clock, WHOLE_WRAP, u.u_control_static1_phaseOffset).x;
    let animSeed = u.u_control_static1_seed + roll;
    let tl = cellHash(cell, animSeed);
    let tr = cellHash(cell + vec2f(1.0, 0.0), animSeed);
    let bl = cellHash(cell + vec2f(0.0, 1.0), animSeed);
    let br = cellHash(cell + vec2f(1.0, 1.0), animSeed);
    let blend = smoothstep(vec2f(0.0), vec2f(1.0), cellFract);
    let smoothed = mix(mix(tl, tr, blend.x), mix(bl, br, blend.x), blend.y);
    let value = mix(tl, smoothed, smoothness);
    return value;
}

fn rgba3_output(uv: vec2f) -> vec4f {
    return premultiply(vec4f(static1_value(uv), u.u_control_rgba3_g, u.u_control_rgba3_b, u.u_control_rgba3_a));
}

fn mix4_output(uv: vec2f) -> vec4f {
    let a = static1_color(uv);
    let b = rgba3_output(uv);
    let amt = clamp(u.u_control_mix4_amount, 0.0, 1.0);
    let f = select(
        amt,
        clamp(0.5 + 0.5 * tan(clamp(2.0 * amt - 1.0, -0.999, 0.999) * 1.5707963), 0.0, 1.0),
        u.u_opt_mix4_curve == 1);
    let lum = dot(a.rgb, vec3f(0.299, 0.587, 0.114));
    let m = u.u_opt_mix4_method;
    if (m == 1) {
        return select(a, b, lum < f);
    } else if (m == 2) {
        return select(a, b, lum > 1.0 - f);
    } else {
        return mix(a, b, f);
    }
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return mix4_output(uv);
}
