tests/snapshots/compile__wgsl_generate_stripes_connected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_checkerboard6_color1: vec4f,
    u_control_checkerboard6_color2: vec4f,
    u_control_checkerboard6_frequency: f32,
    u_control_checkerboard7_color1: vec4f,
    u_control_checkerboard7_color2: vec4f,
    u_control_checkerboard7_frequency: f32,
    u_control_vignette3_radius: f32,
    u_control_vignette3_softness: f32,
    u_control_vignette4_radius: f32,
    u_control_vignette4_softness: f32,
    u_control_vignette5_radius: f32,
    u_control_vignette5_softness: f32,
    u_control_vignette8_radius: f32,
    u_control_vignette8_softness: f32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn vignette3_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette3_radius;
    let softness = max(u.u_control_vignette3_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn vignette4_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette4_radius;
    let softness = max(u.u_control_vignette4_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn vignette5_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette5_radius;
    let softness = max(u.u_control_vignette5_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn checkerboard6_output(uv: vec2f) -> vec4f {
    let frequency = u.u_control_checkerboard6_frequency;
    let scaled_uv = uv * (frequency / 2.0);
    let grid = floor(scaled_uv);
    let checker = floor_mod(grid.x + grid.y, 2.0);
    let c1 = u.u_control_checkerboard6_color1;
    let c2 = u.u_control_checkerboard6_color2;
    return mix(c1, c2, checker);
}

fn checkerboard7_output(uv: vec2f) -> vec4f {
    let frequency = u.u_control_checkerboard7_frequency;
    let scaled_uv = uv * (frequency / 2.0);
    let grid = floor(scaled_uv);
    let checker = floor_mod(grid.x + grid.y, 2.0);
    let c1 = u.u_control_checkerboard7_color1;
    let c2 = u.u_control_checkerboard7_color2;
    return mix(c1, c2, checker);
}

fn vignette8_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette8_radius;
    let softness = max(u.u_control_vignette8_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn stripes1_output(uv: vec2f) -> vec4f {
    let freq = vignette3_mask(uv);
    let duty = vignette4_mask(uv);
    let rot = (vignette5_mask(uv)) * 2.0 * PI;
    let smoothing = vignette8_mask(uv);
    let centered = uv - 0.5;
    let rotated = vec2f(centered.x * cos(rot) - centered.y * sin(rot), centered.x * sin(rot) + centered.y * cos(rot));
    let cycle = fract((rotated.x + 0.5) * freq);
    let halfDuty = duty * 0.5;
    let edge = smoothing * freq * 0.05;
    let band = smoothstep(0.5 - halfDuty - edge, 0.5 - halfDuty + edge, cycle)
        * (1.0 - smoothstep(0.5 + halfDuty - edge, 0.5 + halfDuty + edge, cycle));
    return mix(checkerboard7_output(uv), checkerboard6_output(uv), band);
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return stripes1_output(uv);
}
