tests/snapshots/compile__wgsl_generate_stripes_unconnected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_stripes1_color1: vec4f,
    u_control_stripes1_color2: vec4f,
    u_control_stripes1_frequency: f32,
    u_control_stripes1_phase: f32,
    u_control_stripes1_rotation: f32,
    u_control_stripes1_smoothing: f32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn stripes1_output(uv: vec2f) -> vec4f {
    let freq = u.u_control_stripes1_frequency;
    let duty = u.u_control_stripes1_phase;
    let rot = (u.u_control_stripes1_rotation) * 2.0 * PI;
    let smoothing = u.u_control_stripes1_smoothing;
    let centered = uv - 0.5;
    let rotated = vec2f(centered.x * cos(rot) - centered.y * sin(rot), centered.x * sin(rot) + centered.y * cos(rot));
    let cycle = fract((rotated.x + 0.5) * freq);
    let halfDuty = duty * 0.5;
    let edge = smoothing * freq * 0.05;
    let band = smoothstep(0.5 - halfDuty - edge, 0.5 - halfDuty + edge, cycle)
        * (1.0 - smoothstep(0.5 + halfDuty - edge, 0.5 + halfDuty + edge, cycle));
    return mix(u.u_control_stripes1_color2, u.u_control_stripes1_color1, band);
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return stripes1_output(uv);
}
